# IronRAG

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .jscpd.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  Dockerfile.backend  Dockerfile.deploy  MCP.md  MCP.ru.md  Makefile  README-RU.md  README.md  README.ru.md  README.txt  deny.toml  docker-compose-local.yml  docker-compose-s4.yml  docker-compose.ci.yml  docker-compose.large.yml  docker-compose.yml  install.sh  sonar-project.properties
apps/api/: .env.example  AUDIT.md  Cargo.toml  Dockerfile  build.rs  observability.toml
apps/api/contracts/: ironrag.openapi.yaml  openapi.gen.yaml  rustrag.openapi.yaml
apps/api/docker/: docling-extract.py  runtime-entrypoint.sh  test_docling_extract.py
apps/api/docs/: query_compiler_provider_audit.md  query_ir_audit.md
apps/api/migrations/: 0001_init.sql  0002_query_compile.sql  0002_retrieval_config.sql  0003_minimax_provider_catalog.sql  0003_schema_rollup.sql  0004_ai_config_simplification.sql  0004_canonical_graph_ingest_retrieval_baseline.sql  0004_library_extraction_prompt.sql  0005_ingest_queue_lease_metadata.sql  0005_openai_nano_extract_graph.sql  0005_v0_4_2_provider_catalog_normalization.sql  0006_gpt_5_6_provider_catalog.sql  0006_ollama_bootstrap_and_provider_base_url.sql  0006_ui_mcp_agent.sql  0007_agent_binding_canonical.sql  0007_ai_scope_hierarchy.sql  0007_safe_catalog_defaults.sql  0008_content_document_source_file_name.sql  0009_async_catalog_deletion.sql  0009_atomic_admission_expand.sql  0010_ingest_queue_rank.sql  0010_provider_request_policy.sql  0011_cache_write_billing_unit.sql  0011_ingest_queue_paused_index.sql  0012_canonical_ai_binding_purposes.sql  0013_unique_vector_profile_dimension_claim.sql  0013_web_ingest_two_stage_url_filters.sql  0014_agent_concurrency_graph_indexes.sql  0014_vector_logical_identity.sql  0015_unique_web_page_mutation_item.sql  0015_web_ingest_subdomain_boundary.sql  0016_canonical_knowledge_revision_states.sql  0017_ai_catalog_hard_delete_restrict.sql  0017_maintenance_baseline.sql  0018_knowledge_cascade_fk_indexes.sql
apps/api/scripts/: all-providers-seed-gen.py  check-openapi-coverage.sh  multi-provider-e2e.py  test_all_providers_seed_gen.py  test_multi_provider_e2e.py
apps/api/src/: app.rs  lib.rs  main.rs  mcp_types.rs  openapi.rs
apps/api/tests/: MCP_PARITY.md  ai_config_generation_fencing.rs  arango_contracts.rs  atomic_admission.rs  audit_events.rs  billing_rollups.rs  bootstrap_stack.rs  canonical_knowledge_revision_states.rs  catalog_repository.rs  compliance_no_dbg_macro.rs  compliance_no_handler_sql.rs  compliance_no_hardcoded_languages.rs  compliance_no_panic_in_handlers.rs  compliance_no_prod_dataset_names.rs  content_lifecycle.rs  content_repository.rs  content_revision_lineage.rs  credential_encryption.rs  extract_graph.rs  extract_repository.rs  governance_auth.rs  graph_gc.rs  graph_projection_repository.rs  graph_snapshot_fencing.rs  greenfield_bootstrap.rs  greenfield_contracts.rs  greenfield_support.rs  grounded_benchmark_technical_suite.rs  ingest_attempts.rs  ingest_cancellation.rs  ingest_publication.rs  ingest_repository.rs  knowledge_lifecycle.rs  knowledge_search.rs  mcp_grounded_answer_contract.rs  mcp_knowledge.rs  mcp_memory_contracts.rs  mcp_memory_permissions.rs  mcp_memory_reads.rs  mcp_memory_search.rs  (+17 more)
backend/: .env.example  Cargo.toml  Dockerfile  Makefile  README.md  README.txt  build.rs  clippy.toml
backend/.audit/: audit.json  audit.md
backend/benchmarks/grounded_query/: README.md  grad_agent_workflows_suite.json  grad_api_suite.json  run_live_benchmark.py
backend/contracts/: rustrag.openapi.yaml
backend/docker/: runtime-entrypoint.sh
backend/docs/architecture/: overview.md  provider-strategy.md
backend/docs/operations/: enterprise-maturity.md  local-development.md
backend/docs/security/: secrets-and-provider-accounts.md
backend/migrations/: 0001_init.sql  0001_init_core.sql  0002_bulk_ingest_hardening.sql  0002_content_mutation_source_identity.sql  0002_ingestion_and_retrieval.sql  0003_api_tokens.sql  0003_live_llm_accounting.sql  0004_usage_and_cost.sql  0005_ingestion_worker.sql  0006_chat_sessions.sql  0008_chat_session_prompt_settings.sql
backend/src/: lib.rs  main.rs  mcp_types.rs
backend/src/app/: bootstrap.rs  config.rs  mod.rs  shutdown.rs  state.rs
backend/src/domains/: ai.rs  audit.rs  auth.rs  billing.rs  catalog.rs  content.rs  document_lifecycle.rs  extract.rs  graph.rs  graph_quality.rs  iam.rs  ingest.rs  ingestion.rs  ingestion_state.rs  knowledge.rs  mcp_memory.rs  mod.rs  operational.rs  ops.rs  pricing_catalog.rs  project.rs  provider.rs  provider_profiles.rs  query.rs  query_experience.rs  query_intelligence.rs  query_modes.rs  retrieval.rs  retrieval_diagnostics.rs  runtime_graph.rs  runtime_ingestion.rs  runtime_query.rs  search.rs  ui_admin.rs  ui_chat.rs  ui_documents.rs  ui_graph.rs  ui_identity.rs  usage_governance.rs  workspace.rs
backend/tests/: arango_support.rs  audit_events.rs  billing_rollups.rs  bootstrap_stack.rs  collection_settlement_truth.rs  content_lifecycle.rs  content_repository.rs  document_accounting_resume_idempotency.rs  extract_graph.rs  extract_repository.rs  governance_auth.rs  graph_diagnostics_stability.rs  graph_extract.rs  graph_projection_repository.rs  graph_projection_stability.rs  graph_throughput_pressure.rs  greenfield_bootstrap.rs  greenfield_contracts.rs  greenfield_support.rs  ingest_attempts.rs  ingest_repository.rs  ingestion_job_recovery_repository.rs  knowledge_lifecycle.rs  knowledge_search.rs  live_deepseek_graph_runtime.rs  live_openai_graph_runtime.rs  mcp_knowledge.rs  mcp_memory_audit.rs  mcp_memory_contracts.rs  mcp_memory_mutations.rs  mcp_memory_permissions.rs  mcp_memory_reads.rs  mcp_memory_repository.rs  mcp_memory_search.rs  mcp_memory_support.rs  ops_state.rs  pipeline_hardening_contracts.rs  pipeline_hardening_repository.rs  pipeline_hardening_support.rs  provider_graph_call_reliability.rs  (+13 more)
crates/contracts/: Cargo.toml
(+1583 files in other folders)
