[package]
name = "rustrag-backend"
version = "0.1.0"
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_attributes = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
http = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
genai = "0.6.0-beta.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "macros", "rust_decimal"] }
pgvector = { version = "0.4.1", features = ["sqlx"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal", "sync", "net", "time"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
uuid = { version = "1.16", features = ["v7", "serde"] }
redis = { version = "0.32", features = ["tokio-comp"] }
anyhow = "1.0"
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
rust_decimal = { version = "1", features = ["serde"] }
cookie = "0.18"
argon2 = "0.5"
neo4rs = { version = "0.9.0-rc.9", features = ["uuid"] }
lopdf = "0.39.0"
roxmltree = "0.21.1"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }
base64 = "0.22.1"
tempfile = "3.23.0"
json5 = "0.4"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
