[package]
name = "ironrag-backend"
version.workspace = true
edition = "2024"
rust-version.workspace = true
license = "MIT"
build = "build.rs"
publish = false

[features]
default = []
heap-profile = ["dep:dhat"]

[lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_attributes = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
result_large_err = "allow"
clone_on_copy = "allow"
collapsible_if = "allow"
default_constructed_unit_structs = "allow"
double_ended_iterator_last = "allow"
large_enum_variant = "allow"
let_unit_value = "allow"
manual_inspect = "allow"
manual_pattern_char_comparison = "allow"
manual_contains = "allow"
needless_borrow = "allow"
needless_lifetimes = "allow"
needless_question_mark = "allow"
obfuscated_if_else = "allow"
should_implement_trait = "allow"
unnecessary_lazy_evaluations = "allow"

[dependencies]
axum = { version = "0.8", features = ["macros", "json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
utoipa.workspace = true
config = "0.15"
http = "1"
reqwest = { version = "0.13.4", features = ["json", "rustls", "stream"] }
regex = "1.12.4"
semver = "1"
opentelemetry = { version = "0.32", features = ["logs", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["logs", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["trace", "metrics", "logs", "grpc-tonic", "tls-webpki-roots", "http-proto", "http-json", "reqwest-blocking-client", "reqwest-rustls", "internal-logs"] }
opentelemetry-http = "0.32"
opentelemetry-semantic-conventions = { version = "0.32", features = ["semconv_experimental"] }
opentelemetry-appender-tracing = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate", "macros", "rust_decimal"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "sync", "net", "time", "io-util", "process"] }
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { version = "0.7", features = ["cors", "trace", "fs", "compression-gzip", "compression-br", "compression-zstd"] }
axum-prometheus = "0.10"
tracing = "0.1"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
uuid = { version = "1.23.4", features = ["v4", "v5", "v7", "serde"] }
redis = { version = "1.3.0", features = ["tokio-comp"] }
anyhow = "1.0"
futures = "0.3"
http-body-util = "0.1"
sha2 = "0.11.0"
hmac = "0.13.0"
subtle = "2"
hex = "0.4"
async-trait = "0.1"
aws-sdk-s3 = { version = "1.137", default-features = false, features = ["behavior-version-latest", "default-https-client", "http-1x", "rt-tokio"] }
rust_decimal = { version = "1", features = ["serde"] }
cookie = "0.18"
argon2 = { version = "0.5", features = ["std"] }
calamine = "0.35.0"
csv = "1.4.0"
tree-sitter = "0.26.10"
# Tier 1: mainstream languages
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-bash = "0.25.1"
tree-sitter-rust = "0.24.2"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-php = "0.24.2"
# Tier 2: common in technical docs
tree-sitter-swift = "0.7.3"
# tree-sitter-kotlin removed: depends on tree-sitter 0.20, incompatible with 0.25
tree-sitter-scala = "0.26.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-proto = "0.4"
# Config parsing (structural, not tree-sitter)
serde_yaml = "0.9"
toml_edit = { version = "0.25.12", features = ["serde"] }
async-tar = { version = "0.6.1", default-features = false, features = ["runtime-tokio"] }
async-compression = { version = "0.4", features = ["zstd", "tokio"] }
base64 = "0.22.1"
tempfile = "3.27.0"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
png = "0.18.1"
scraper = "0.27.0"
encoding_rs = "0.8.35"
unicode-normalization = "0.1"
url = "2"
ironrag-contracts = { path = "../../crates/contracts" }
clap = { version = "4", features = ["derive"] }
rand = "0.10.2"
dhat = { version = "0.3", optional = true }
percent-encoding = "2"

# Production memory allocator. The default glibc allocator retains freed
# memory in per-thread arenas and rarely returns it to the OS, which on a
# multi-threaded tokio worker manifested as an idle process pinned at multiple
# GiB of RSS (allocator retention, not live heap) and recurring MEMCG OOM
# kills. jemalloc with a background decay thread releases dirty/muzzy pages
# back to the OS on a timer. Configured at runtime via the `_RJEM_MALLOC_CONF`
# env var (jemalloc reads `<PREFIX>_MALLOC_CONF`; tikv builds with the `_rjem_`
# prefix), so no `unsafe` `#[export_name]` global is needed — important because
# this crate sets `unsafe_code = "forbid"` and edition 2024 treats
# `#[export_name]` as unsafe. Skipped under `heap-profile`, where dhat owns the
# global allocator. msvc is excluded (jemalloc is unsupported there); prod and
# local docker are both Linux.
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.7"

[[bin]]
name = "ironrag-cli"
path = "src/bin/ironrag_cli.rs"

[[bin]]
name = "ironrag-emit-openapi"
path = "src/bin/emit_openapi.rs"

[[bin]]
name = "ironrag-maintenance"
path = "src/bin/ironrag_maintenance.rs"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
yaml-rust2 = "0.11.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
insta = { version = "1.48.0", features = ["json"] }
