[package]
name = "ironrag-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[lints.rust]
unsafe_code = "forbid"
unused_lifetimes = "deny"
unused_attributes = "deny"
unreachable_pub = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
# utoipa-gen emits `if let Some(v) = ... else ...` inside ToSchema impls; the
# style preference does not apply to derive-macro-generated code.
option_if_let_else = "allow"

[dependencies]
chrono.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
uuid.workspace = true
